--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,16 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 100vh;;
+    background-color: #0F4C81;
 }
 
 main {
     background-color: beige;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
+    font-size: 1.2rem;
 }
 
 h1, h2 {
